--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,24 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(OpenInjector CXX)
-include_directories(include)
-set(SAPI_ROOT "${PROJECT_SOURCE_DIR}/sandboxed-api/")
-add_subdirectory("${SAPI_ROOT}"
-		"${CMAKE_BINARY_DIR}/sandboxed-api-build" EXCLUDE_FROM_ALL)
+#including sandboxed api library
+set(SAPI_ROOT "${CMAKE_BINARY_DIR}/sandboxed-api"
+    CACHE PATH "Path to the Sandboxed API source tree")
+# Configure options and include Sandboxed API as a sub-directory.
 set(SAPI_ENABLE_EXAMPLES OFF CACHE BOOL "")
 set(SAPI_ENABLE_TESTS OFF CACHE BOOL "")
+add_subdirectory("${SAPI_ROOT}"
+                 "${CMAKE_BINARY_DIR}/sandboxed-api-build" )
+
+
+include_directories(include)
+include_directories(${CMAKE_BINARY_DIR}/sandboxed-api)
+
 add_library(binary include/binary.h src/binary.cpp)
 add_library(injector include/injector.h src/injector.cpp)
 add_library(statistics include/statistics.h src/statistics.cpp)
 add_library(tester STATIC include/tester.h src/tester.cpp)
+
 target_link_libraries(tester PRIVATE
 		absl::memory
 		sandbox2::bpf_helper
